# python-docker

./: Dockerfile  Makefile  pyproject.toml
src/: main.py
